fixed login issues, refactoring project, deleted unnecessary files

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/authenticationFragment"
-        android:name="com.kaloglu.actualflayer.presentation.auth.AuthenticationFragment"
+        android:name="com.kaloglu.actualflyer.presentation.auth.AuthenticationFragment"
         android:label="AuthenticationFragment" />
 </navigation>
