--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -7,5 +7,13 @@
     <fragment
         android:id="@+id/authenticationFragment"
         android:name="com.kaloglu.actualflyer.presentation.auth.AuthenticationFragment"
-        android:label="AuthenticationFragment" />
+        android:label="AuthenticationFragment" >
+        <action
+            android:id="@+id/fromAuthFragmentToProductsFragment"
+            app:destination="@id/productsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/productsFragment"
+        android:name="com.kaloglu.actualflyer.presentation.products.ProductsFragment"
+        android:label="ProductsFragment" />
 </navigation>
